--- a/GameOfNature/res/layout/activity_question.xml
+++ b/GameOfNature/res/layout/activity_question.xml
@@ -11,35 +11,22 @@
     
     <Button
         android:id="@+id/question_btnAnswer1"
-        android:layout_width="160dp"
+        android:layout_width="145dp"
         android:layout_height="70dp"
-        android:background="@drawable/blue_button"
         android:layout_centerVertical="true"
+        android:background="@drawable/blue_button"
         android:onClick="tryAnswer"
         android:text="@string/answer_1"
         android:textColor="#FFFFFF"
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/question_btnAnswer4"
-        android:layout_width="160dp"
-        android:layout_height="70dp"
-        android:background="@drawable/blue_button"
-        android:layout_alignBaseline="@+id/question_btnAnswer3"
-        android:layout_alignBottom="@+id/question_btnAnswer3"
-        android:layout_alignParentRight="true"
-        android:onClick="tryAnswer"
-        android:text="@string/answer_4"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold" />
-
-    <Button
         android:id="@+id/question_btnAnswer2"
-        android:layout_width="160dp"
+        android:layout_width="145dp"
         android:layout_height="70dp"
-        android:background="@drawable/blue_button"
         android:layout_above="@+id/question_btnAnswer3"
-        android:layout_alignLeft="@+id/question_btnAnswer4"
+        android:layout_toRightOf="@+id/question_btnAnswer1"
+        android:background="@drawable/blue_button"
         android:onClick="tryAnswer"
         android:text="@string/answer_2"
         android:textColor="#FFFFFF"
@@ -47,16 +34,32 @@
 
     <Button
         android:id="@+id/question_btnAnswer3"
-        android:layout_width="160dp"
+        android:layout_width="145dp"
         android:layout_height="70dp"
         android:layout_alignLeft="@+id/question_btnAnswer1"
         android:layout_below="@+id/question_btnAnswer1"
         android:layout_marginTop="19dp"
+        android:layout_toLeftOf="@+id/question_btnAnswer4"
         android:background="@drawable/blue_button"
         android:onClick="tryAnswer"
         android:text="@string/answer_3"
         android:textColor="#FFFFFF"
         android:textStyle="bold" />
+    
+     <Button
+        android:id="@+id/question_btnAnswer4"
+        android:layout_width="145dp"
+        android:layout_height="70dp"
+        android:layout_alignBaseline="@+id/question_btnAnswer3"
+        android:layout_alignBottom="@+id/question_btnAnswer3"
+        android:layout_alignRight="@+id/question_btnAnswer2"
+        android:layout_toRightOf="@+id/question_btnAnswer1"
+        android:background="@drawable/blue_button"
+        android:onClick="tryAnswer"
+        android:text="@string/answer_4"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold" />
+    
     
    <LinearLayout
         android:layout_width="fill_parent"
@@ -98,4 +101,5 @@
             android:textStyle="bold" />
     </LinearLayout>
 
+   
 </RelativeLayout>
