Fixat buggar i finalQuestion och avslutaknapp

--- a/GameOfNature/res/layout/activity_finalquestion.xml
+++ b/GameOfNature/res/layout/activity_finalquestion.xml
@@ -9,35 +9,68 @@
     tools:context=".QuestionActivity"
     android:background="@drawable/background_clear" >
    
-    <TextView
-        android:id="@+id/finalquestion_title"
-        style="@style/questionTopic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="@string/finalquestion_topic" />
-
+        android:layout_marginTop="40dp"
+        android:background="@drawable/layout_round_corners"
+        android:orientation="vertical"
+        android:textStyle="bold" >
     <TextView
-        android:id="@+id/finalquestion_content"
-        style="@style/questionText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/finalquestion_title"
+            android:id="@+id/finalquestion_title"
+            style="@style/questionTopic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Slutuppgift"
+            android:textColor="#FFFFFF" />
+	</LinearLayout>
+	
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="120dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
-        android:text="@string/finalquestion" />
+        android:layout_marginTop="80dp"
+        android:background="@drawable/layout_round_corners"
+        android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/finalquestion_codebox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="45dp"
-        android:ems="10"
-        android:inputType="number"
-        android:text="@string/finalquestioncode"
-        android:visibility="visible" />
-
+        <TextView
+            android:id="@+id/finalquestion_content"
+            style="@style/questionText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:padding="5dp"
+            android:text="@string/question"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold" />
+    </LinearLayout>
+    
+	<LinearLayout
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentBottom="true"
+		android:layout_marginBottom="45dp"    
+		android:layout_centerHorizontal="true"
+		android:gravity="center"
+		android:orientation="vertical">
+	    <EditText
+	        android:id="@+id/finalquestion_codebox"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:ems="10"
+	        android:inputType="numberPassword"
+	        android:hint="@string/finalquestioncode"
+	        android:visibility="visible" />
+	    <Button
+	        android:id="@+id/approveButton"
+	        android:background="@drawable/button_up"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="Godkänn upppgift"/>
+	</LinearLayout>
 </RelativeLayout>
