--- a/GameOfNature/res/layout/activity_winner.xml
+++ b/GameOfNature/res/layout/activity_winner.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -24,7 +24,7 @@
 		        android:id="@+id/teamNameWinTitle"
 		        android:layout_width="wrap_content"
        		    android:layout_height="wrap_content"
-       		    android:layout_marginTop="30dp"
+       		    android:layout_marginTop="15dp"
        		    android:text="@string/team_name"
        		    style="@style/colourText"/>
 
@@ -64,5 +64,13 @@
                 android:text="@string/distance"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/exitGame"
+                android:background="@drawable/button_up"
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Avsluta" />
     
 </LinearLayout>
