--- a/GameOfNature/res/layout/activity_options.xml
+++ b/GameOfNature/res/layout/activity_options.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background_clear"
-    tools:context=".Alternativsida" >
+    tools:context=".OptionsActivity" >
 		<!-- Lagnamn -->
         <TextView
             android:id="@+id/LagnamnView"
