--- a/GameOfNature/res/layout/activity_task_dialog.xml
+++ b/GameOfNature/res/layout/activity_task_dialog.xml
@@ -7,6 +7,7 @@ android:orientation="vertical" >
 
 <TextView
     android:id="@+id/task_dialog_title"
+    android:layout_marginTop="20dp"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
