--- a/GameOfNature/res/layout/activity_winner.xml
+++ b/GameOfNature/res/layout/activity_winner.xml
@@ -1,42 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-<<<<<<< HEAD
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@drawable/bakgrunden_vinst"
-=======
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
->>>>>>> master
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".WinnerActivity" >
-<<<<<<< HEAD
-=======
     
-       		<TextView
-	            android:id="@+id/WinTitle"
-	            android:textStyle="bold"
-				style="@style/colourText"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_marginTop="70dp"
-	            android:text="@string/winner_title"
-	            android:textAppearance="?android:attr/textAppearanceLarge" />
-		    <TextView	
-		        android:id="@+id/teamNameWinTitle"
-		        android:layout_width="wrap_content"
-       		    android:layout_height="wrap_content"
-       		    android:layout_marginTop="15dp"
-       		    android:text="@string/team_name"
-       		    style="@style/colourText"/>
->>>>>>> master
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,7 +53,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/game_time"
-<<<<<<< HEAD
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold" />
     </LinearLayout>
@@ -105,32 +78,13 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold" />
     </LinearLayout>
-
-</LinearLayout>
-=======
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-	
-	    	<TextView	
-		        android:id="@+id/distanceWinTitle"
-		        android:layout_width="wrap_content"
-       		    android:layout_height="wrap_content"
-       		    android:text="@string/distance"
-       		    style="@style/colourText"/>
-            <TextView
-                android:id="@+id/distanceWin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/distance"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textStyle="bold" />
-
-            <Button
+    <Button
                 android:id="@+id/exitGame"
+                android:layout_gravity="center"
                 android:background="@drawable/button_up"
                 android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Avsluta" />
-    
+
 </LinearLayout>
->>>>>>> master
