--- a/GameOfNature/res/layout/activity_task_dialog.xml
+++ b/GameOfNature/res/layout/activity_task_dialog.xml
@@ -51,7 +51,7 @@ android:orientation="vertical" >
     android:layout_width="150dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    android:text="Cancel"
+    android:text="Avbryt"
     android:textColor="#000"
     android:background="@drawable/button_up"
     android:textSize="18sp"
