--- a/GameOfNature/res/layout/activity_finalquestion.xml
+++ b/GameOfNature/res/layout/activity_finalquestion.xml
@@ -36,6 +36,8 @@
 	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
+	   	android:paddingTop="25dp"
+	    android:paddingBottom="25dp"
 	    android:layout_alignParentTop="true"
 	    android:layout_centerHorizontal="true"
 	    android:layout_marginTop="39dp"
