--- a/GameOfNature/res/layout/activity_question.xml
+++ b/GameOfNature/res/layout/activity_question.xml
@@ -60,7 +60,9 @@
 
    <LinearLayout
        android:layout_width="fill_parent"
-       android:layout_height="140dp"
+       android:layout_height="wrap_content"
+       android:paddingTop="25dp"
+       android:paddingBottom="25dp"
        android:layout_alignLeft="@+id/question_btnAnswer1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
