--- a/GameOfNature/res/layout/activity_game_board.xml
+++ b/GameOfNature/res/layout/activity_game_board.xml
@@ -75,5 +75,21 @@
             android:onClick="zoomOut"/>
 
     </LinearLayout>
-    
+	
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingBottom="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true" >
+
+	    <Button
+	        android:id="@+id/locationButton"
+	        android:paddingLeft="12dp"
+	        android:layout_width="50dp"
+	        android:layout_height="50dp"
+	        android:drawableTop="@drawable/location"
+	        android:onClick="goToMyLocation"/>
+	</LinearLayout>
 </RelativeLayout> 
